Done with Demo.

--- a/BIThesisApi.Application/BIThesisApi.Application.csproj
+++ b/BIThesisApi.Application/BIThesisApi.Application.csproj
@@ -4,4 +4,14 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BIThesisApi.Domain\BIThesisApi.Domain.csproj" />
+      <ProjectReference Include="..\BIThesisApi.Persistence\BIThesisApi.Persistence.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="8.0.0" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
