--- a/BIThesisApi.Api/BIThesisApi.Api.csproj
+++ b/BIThesisApi.Api/BIThesisApi.Api.csproj
@@ -4,5 +4,15 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BIThesisApi.Application\BIThesisApi.Application.csproj" />
+      <ProjectReference Include="..\BIThesisApi.Domain\BIThesisApi.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="8.0.0" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
+    </ItemGroup>
+
 
 </Project>
