--- a/BIThesisApi.Persistence/BIThesisApi.Persistence.csproj
+++ b/BIThesisApi.Persistence/BIThesisApi.Persistence.csproj
@@ -8,6 +8,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.1" />
+      <PackageReference Include="System.Data.SqlClient" Version="4.3.0" />
     </ItemGroup>
 
 </Project>
